feat: add /api/v1/profile/change-password
