# backend/console/static/swagger/swagger.yaml
@@ -38,6 +38,42 @@ paths:
               schema:
                 $ref: "#/components/schemas/Response"
 
+  /api/v1/profile/change-password:
+    post:
+      security:
+        - jwt: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                currentPassword:
+                  type: string
+                newPassword:
+                  type: string
+                confirmNewPassword:
+                  type: string
+      responses:
+        "200":
+          description: Change password successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Response"
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Response"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Response"
+
 components:
   securitySchemes:
     jwt:
